# patch-apply-rs

./: Cargo.toml  LICENSE  README.md
examples/: apply.rs
examples/files/: cmake.patch  diff1.patch  diff2.patch  diff3.patch  generate.sh  input.txt  output.txt  output1.txt  output2.txt  output3.txt  output_cmake.txt
src/: apply.rs  ast.rs  lib.rs  parser.rs
tests/: parse_patch.rs  parse_samples.rs  regressions.rs
