[package]
name = "patch"
version = "0.8.0"
authors = ["phil <uniphil@gmail.com>", "Eugene Hauptmann"]
description = "Parse patches in the unified diff format"
repository = "https://github.com/eugenehp/patch-rs"
readme = "README.md"
keywords = ["patch", "diff", "parse", "nom"]
license = "MIT"
edition = "2018"

[[example]]
name = "apply"
path = "./examples/apply.rs"

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
chrono = "0.4.19"

[dev-dependencies]
pretty_assertions = "1.0.0"
