[package]
name = "patch-apply"
version = "0.8.1"
authors = ["phil <uniphil@gmail.com>", "Eugene Hauptmann <e@eugenehp.de>"]
description = "Parse and apply patches in the unified diff format"
repository = "https://github.com/eugenehp/patch-apply-rs"
readme = "README.md"
keywords = ["patch", "diff", "parse", "nom", "git"]
categories = [
    "parsing",
    "development-tools",
    "parser-implementations"
]
license = "MIT"
edition = "2018"


[[example]]
name = "apply"
path = "./examples/apply.rs"

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
chrono = "0.4.19"

[dev-dependencies]
pretty_assertions = "1.0.0"
